fix css layout issues after signup templates merge

--- a/src/less/ripple/tabs.less
+++ b/src/less/ripple/tabs.less
@@ -1,4 +1,4 @@
-#t-register form, #t-login form {
+#t-register form, #t-login form, #t-signup form {
   margin-top: 25px;
   margin-bottom: 25px;
 
